<resources>
    <string name="app_name" translatable="false">AstonIntensiv4</string>
    <string name="task_1_button_text">Task 1</string>
    <string name="task_2_button_text">Task 2</string>
    <string name="fragment_a_text_view">Fragment A</string>
    <string name="fragment_b_text_view">Fragment B</string>
    <string name="fragment_c_text_view">Fragment C</string>
    <string name="fragment_d_text_view">Fragment D</string>
    <string name="transmitted_text">Hello Fragment C</string>
    <string name="user_photo_description">User photo</string>
    <string name="user_name_text">Name %s</string>
    <string name="user_surname_text">Surname %s</string>
    <string name="user_phone_text">Phone %s</string>
    <string name="edit_name_text">Please enter your name</string>
    <string name="edit_surname_text">Please enter your surname</string>
    <string name="edit_phone_text">Please enter your phone</string>
    <string name="edit_save_button_text">Save</string>


</resources>