<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".task_1.BFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fragment_b_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_c_button"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_button"
        android:text="@string/fragment_c_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_a_button"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_button"
        android:text="@string/fragment_a_text_view" />

</LinearLayout>